--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fusioncharts": "^4.0.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
+    "react-icons-kit": "^2.0.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
