--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
