--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-social-login": "^3.4.17",
+    "react-social-login-buttons": "^3.6.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
