--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-fusioncharts": "^4.0.0",
     "react-icons": "^4.8.0",
     "react-icons-kit": "^2.0.0",
+    "react-markdown": "^8.0.7",
     "react-paginate": "^8.1.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-social-login": "^3.4.17",
